<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/settings_save"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/button_selector2"
        android:text="@string/settings_save" />

    <TextView
        android:id="@+id/settings_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:paddingLeft="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_service_url" />

                <EditText
                    android:id="@+id/settings_service_url"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_user" />

                <EditText
                    android:id="@+id/settings_user"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_password" />

                <EditText
                    android:id="@+id/settings_password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_iteration1" />

                <EditText
                    android:id="@+id/settings_counter_iteration1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_iteration2" />

                <EditText
                    android:id="@+id/settings_counter_iteration2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_iteration3" />

                <EditText
                    android:id="@+id/settings_counter_iteration3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_iteration4" />

                <EditText
                    android:id="@+id/settings_counter_iteration4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_iteration5" />

                <EditText
                    android:id="@+id/settings_counter_iteration5"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_order" />

                <Spinner
                    android:id="@+id/settings_counter_order"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_enable_voice_title" />

                <CheckBox
                    android:id="@+id/settings_counter_enable_voice"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/settings_counter_enable_voice_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_counter_end_text" />

                <EditText
                    android:id="@+id/settings_counter_end_text"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_timer_time_minutes" />

                <EditText
                    android:id="@+id/settings_timer_time_minutes"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_timer_time_seconds" />

                <EditText
                    android:id="@+id/settings_timer_time_seconds"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/settings_timer_end_text" />

                <EditText
                    android:id="@+id/settings_timer_end_text"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>